# dotsmith

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOTSMITH_PLAN.md  Makefile  README.md  install.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
data/modules/alacritty/: module.toml  options.toml
data/modules/awesomewm/: module.toml  options.toml
data/modules/git/: module.toml  options.toml
data/modules/kitty/: module.toml  options.toml
data/modules/neovim/: module.toml  options.toml
data/modules/tmux/: module.toml  options.toml
data/modules/zsh/: module.toml  options.toml
docs/: commands.md  configuration.md  contributing.md  deploy-and-profiles.md  getting-started.md  plugins.md  snapshots-and-history.md  supported-tools.md  tui.md
src/: main.rs
src/cli/: add.rs  deploy.rs  deploy_remote.rs  diff.rs  doctor.rs  edit.rs  history.rs  init.rs  list.rs  mod.rs  plugins.rs  profile.rs  reload.rs  remove.rs  repo.rs  rollback.rs  search.rs  snapshot.rs  status.rs  watch.rs
src/core/: config.rs  deploy.rs  detect.rs  errors.rs  manifest.rs  mod.rs  module.rs  plugin.rs  plugin_info.rs  profile.rs  reload.rs  remote.rs  repo.rs  snapshot.rs  validate.rs
src/tui/: event.rs  mod.rs  terminal.rs
src/util/: diff.rs  fs.rs  mod.rs  paths.rs
tests/: add_test.rs  init_test.rs  list_test.rs  plugin_test.rs  profile_test.rs  remote_test.rs  remove_test.rs  snapshot_test.rs
tests/common/: mod.rs
tests/fixtures/: tmux.conf
(+18 files in other folders)
