[package]
name = "dotsmith"
version = "0.1.0-alpha.1"
edition = "2024"
description = "The dotfile workbench — explore, manage, and master your configs"
license = "MIT"
keywords = ["dotfiles", "config", "tui", "terminal", "cli"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
colored = "2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
